# services

./: .cursorrules  .dockerignore  .env.docker  .env.example  .gitignore  AGENTS.md  AIIMS Services API.with_cdac.postman_collection.json  ANTIGRAVITY_INTEGRATION.md  Dockerfile  FINAL_REPORT.md  GETTING_STARTED.md  Makefile  QUICK_START.md  README.md  SECURITY_AUDIT_REPORT.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  run.py  setup-antigravity.sh  setup_uv_docker.sh
agent/: .cursorrules  00_BOOTSTRAP.md  00_INDEX.md  00_SYSTEM.md  01_PROJECT_CONTEXT.md  02_CONVENTIONS.md  ACTIVE_SCOPE.md  AGENT_MODE.md  ARCHITECTURE.md  CHANGELOG.md  COMPLETION_SUMMARY.md  COMPONENT_GRAPH.md  CONTEXT_BUDGET.md  COPY_INTO_NEW_REPO.md  MIGRATION_GUIDE.md  PROJECT_COMPLETE.md  PROJECT_FINGERPRINT.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  REFERENCE_MAP.md  ROUTING_RULES.md  TAXONOMY.md  UNIVERSAL_SUPPORT.md
agent/artifacts/: BUILD_LOG.md  DECISION_RECORD.md  DEVELOPER_GUIDE_TEMPLATE.md  DOCS_MANIFEST.md  FLUTTER_ANALYSIS.md  RUNBOOK.md  TESTER_GUIDE_TEMPLATE.md  USER_GUIDE_TEMPLATE.md  incident_report.md  maintenance_mode.md  postmortem.md  pr_summary.md  release_notes.md  runbook.md  runbook_template.md  security_checklist.md
agent/autofill/: AUTOFILL_VARIABLES.md  PATH_AND_SERVICE_INFERENCE.md
agent/checklists/: CMAKE_CONFIG_EVIDENCE.md  CPP_BUILD_EVIDENCE.md  DOCKER_BUILD_FAIL_EVIDENCE.md  DOCKER_RUNTIME_EVIDENCE.md  JAVA_BUILD_EVIDENCE.md  MIGRATION_FAIL_EVIDENCE.md  NGINX_502_EVIDENCE.md  PERF_REGRESSION_EVIDENCE.md  SYSTEMD_FAIL_EVIDENCE.md
agent/components/: app.md  default.md  root.md
agent/contracts/: CONTEXT_SCHEMA.md  REPO_LAYOUT_FLASK.md  REPO_LAYOUT_FLASK_REACT.md  STYLE_AND_NAMING.md  UNIVERSAL_PROJECT_SCHEMA.md
agent/environments/: COMMAND_POLICY.md  ENVIRONMENT_MODES.md  EXECUTION_CONTRACT.md  (+1 more)
app/: __init__.py  config.py  extensions.py
docs/: API_USER_GUIDE.md  CHANGELOG_2026_01_06.md  DATA_RETENTION.md  DEVELOPER_GUIDE.md  SECURITY_HARDENING.md  SECURITY_QUICK_REF.md  agent.md  change log.md  flow.md  issue.md  solved_issue.md
instance/: sms.db
migrations/: env.py  script.py.mako
scripts/: audit_dependencies.sh  generate_docs.py  update_release.sh
tests/: conftest.py  test_health.py  test_messages.py  test_multi_services.py  test_security.py  test_sms.py  test_validation.py
(+192 files in other folders)
