[project]
name = "services"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.14.0",
    "amqp==5.3.1",
    "aniso8601==10.0.1",
    "attrs==25.3.0",
    "billiard==4.2.1",
    "bleach==6.1.0",
    "blinker==1.9.0",
    "celery==5.5.3",
    "certifi==2025.8.3",
    "cffi==2.0.0",
    "charset-normalizer==3.4.3",
    "click==8.2.1",
    "click-didyoumean==0.3.1",
    "click-plugins==1.1.1.2",
    "click-repl==0.3.0",
    "cryptography==43.0.1",
    "deprecated==1.2.18",
    "flask==3.1.2",
    "flask-cors==6.0.1",
    "flask-limiter==3.12",
    "flask-restx==1.3.0",
    "flask-sqlalchemy==3.1.1",
    "flask-wtf==1.2.1",
    "greenlet==3.2.4",
    "gunicorn==23.0.0",
    "idna==3.10",
    "importlib-metadata==8.7.0",
    "importlib-resources==6.5.2",
    "iniconfig==2.1.0",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "jsonschema==4.25.1",
    "jsonschema-specifications==2025.4.1",
    "kombu==5.5.4",
    "limits==5.5.0",
    "mako==1.3.10",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.2",
    "marshmallow>=4.2.0",
    "mdurl==0.1.2",
    "opentelemetry-api==1.36.0",
    "opentelemetry-instrumentation==0.57b0",
    "opentelemetry-instrumentation-flask==0.57b0",
    "opentelemetry-instrumentation-requests==0.57b0",
    "opentelemetry-instrumentation-wsgi==0.57b0",
    "opentelemetry-sdk==1.36.0",
    "opentelemetry-semantic-conventions==0.57b0",
    "opentelemetry-util-http==0.57b0",
    "ordered-set==4.1.0",
    "packaging==25.0",
    "phonenumbers==8.13.50",
    "pip-audit==2.7.0",
    "pluggy==1.6.0",
    "prometheus-client==0.21.0",
    "prompt-toolkit==3.0.52",
    "pycparser==2.23",
    "pygments==2.19.2",
    "pytest==8.4.1",
    "pytest-flask==1.3.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.1",
    "pytz==2025.2",
    "redis==6.4.0",
    "referencing==0.36.2",
    "requests==2.32.3",
    "rich==13.9.4",
    "rpds-py==0.27.1",
    "safety==3.0.1",
    "six==1.17.0",
    "sqlalchemy==2.0.43",
    "tenacity==9.0.0",
    "typing-extensions==4.15.0",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "vine==5.1.0",
    "wcwidth==0.2.13",
    "werkzeug==3.1.3",
    "wrapt==1.17.3",
    "zipp==3.23.0",
]
